accord
 * Feature Flag for Accord Transactions (CASSANDRA-18195)
 * CEP-15: Multi-Partition Transaction CQL Support (Alpha) (CASSANDRA-17719)
 * CEP-15 (C*): Messaging and storage engine integration (CASSANDRA-17103)

5.0
 * Upgrade to Opcodes.ASM9 (CASSANDRA-17971)
 * Add MaxSSTableSize and MaxSSTableDuration metrics and propagate them together with local read/write ratio to tablestats (CASSANDRA-18283)
 * Add more logging around CompactionManager operations (CASSANDRA-18268)
 * Reduce memory allocations of calls to ByteBufer.duplicate() made in org.apache.cassandra.transport.CBUtil#writeValue (CASSANDRA-18212)
 * CEP-17: SSTable API (CASSANDRA-17056)
 * Gossip stateMapOrdering does not have correct ordering when both EndpointState are in the bootstrapping set (CASSANDRA-18292)
 * Snapshot only sstables containing mismatching ranges on preview repair mismatch (CASSANDRA-17561)
 * More accurate skipping of sstables in read path (CASSANDRA-18134)
 * Prepare for JDK17 experimental support (CASSANDRA-18179, CASSANDRA-18258)
 * Remove Scripted UDFs internals; hooks to be added later in CASSANDRA-17281 (CASSANDRA-18252)
 * Update JNA to 5.13.0 (CASSANDRA-18050)
 * Make virtual tables decide if they implicitly enable ALLOW FILTERING (CASSANDRA-18238)
 * Add row, tombstone, and sstable count to nodetool profileload (CASSANDRA-18022)
 * Coordinator level metrics for read response and mutation row and column counts (CASSANDRA-18155)
 * Add CQL functions for dynamic data masking (CASSANDRA-17941)
 * Print friendly error when nodetool attempts to connect to uninitialized server (CASSANDRA-11537)
 * Use G1GC by default, and update default G1GC settings (CASSANDRA-18027)
 * SimpleSeedProvider can resolve multiple IP addresses per DNS record (CASSANDRA-14361)
 * Remove mocking in InternalNodeProbe spying on StorageServiceMBean (CASSANDRA-18152)
 * Add compaction_properties column to system.compaction_history table and nodetool compactionhistory command (CASSANDRA-18061)